# afazer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requisitos.org
.github/workflows/: ci.yml
include/afazer/cli/: app.hpp
include/afazer/dominio/: configuracoes.hpp  exportador.hpp  filtros.hpp  logger.hpp  notificador.hpp  relatorios.hpp  tarefa.hpp
include/afazer/util/: arquivo_lock.hpp  tempo.hpp
src/cli/: app.cpp  main.cpp
src/dominio/: configuracoes.cpp  exportador.cpp  filtros.cpp  logger.cpp  notificador.cpp  relatorios.cpp  tarefa.cpp
src/util/: CMakeLists.txt  arquivo_lock.cpp  tempo.cpp
test/: relatorios_tests.cpp
tests/: configuracoes_persistencia_tests.cpp  configuracoes_test.cpp  exportador_test.cpp  filtros_tests.cpp  integracao_test.cpp  logger_relatorios_tests.cpp  logger_tests.cpp  notificador_test.cpp  relatorios_test.cpp  tarefas_test.cpp  tarefas_tests.cpp
